tests/snapshots/generated_from_inputs__bad_unclosed.snap
---
source: tests/fixtures.rs
description: "int main() {{ }"
input_file: inputs/bad/unclosed.lat
---
[31mError:[0m Syntax error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0munclosed:1:16[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mm[0m[38;5;249ma[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249m([0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m{[0m[38;5;249m{[0m[38;5;249m [0m[38;5;249m}[0m
 [38;5;240m  │[0m                [31m│[0m 
 [38;5;240m  │[0m                [31m╰[0m[31m─[0m Unexpected end of file
 [38;5;240m  │[0m                [31m│[0m 
 [38;5;240m  │[0m                [31m╰[0m[31m─[0m Expected one of: "true", "false", "num", "str", "ident", "if", "while", "return", "{", "}", "(", ";", "-", "!"
[38;5;246m───╯[0m
