tests/snapshots/generated_from_inputs__bad_undeclared_variable_as_instruction.snap
---
source: tests/fixtures.rs
description: "// Author: Tomasz Wysocki 277696\nint main() {\n    i;\n    return 0;\n}\n"
input_file: inputs/bad/undeclared_variable_as_instruction.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m undeclared_variable_as_instruction:3:5 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[31mi[0m[38;5;249m;[0m
 [38;5;240m  │[0m     [31m┬[0m  
 [38;5;240m  │[0m     [31m╰[0m[31m─[0m[31m─[0m Unknown variable `i`
[38;5;246m───╯[0m
