tests/snapshots/generated_from_inputs__bad_variable_with_void_type.snap
---
source: tests/fixtures.rs
description: "// Author: Jacek Tomaszewski 277663\n// void variable type\n\nint main() {\n   void x;\n   return 0;\n}\n"
input_file: inputs/bad/variable_with_void_type.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m variable_with_void_type:5:4 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m5 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[31mv[0m[31mo[0m[31mi[0m[31md[0m[31m [0m[31mx[0m[31m;[0m
 [38;5;240m  │[0m    [31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m       [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m Cannot assign to void variable
[38;5;246m───╯[0m
