tests/snapshots/generated_from_inputs__bad_while_true_bad_return_type.snap
---
source: tests/fixtures.rs
description: "// Author: Tomasz Biczel 277568\nint main() {\n    while (true) {\n        string x;\n        x = readString();\n        if (x == \"exit\")\n            return \"asd\";\n        else\n            printString(\"jeszcze raz\");\n    }\n}"
input_file: inputs/bad/while_true_bad_return_type.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m while_true_bad_return_type:7:20 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m7 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249mr[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249mu[0m[38;5;249mr[0m[38;5;249mn[0m[38;5;249m [0m[31m"[0m[31ma[0m[31ms[0m[31md[0m[31m"[0m[38;5;249m;[0m
 [38;5;240m  │[0m                    [31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m                      [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m Type mismatch: expected `int`, found `string`
[38;5;246m───╯[0m
