tests/snapshots/generated_from_inputs__good_add.snap
---
source: tests/fixtures.rs
description: "// Author: Tomasz Wysocki 277696\n\nint main() {\n    printInt(1 + 1);\n    return 0;\n}\n"
input_file: inputs/good/add.lat
---
; ModuleID = 'add'
source_filename = "add"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @printInt(i32 2)
  ret i32 0
}

