tests/snapshots/generated_from_inputs__good_core022.snap
---
source: tests/fixtures.rs
description: "int main() {\n    int x;\n    printInt(x);\n    return 0;\n}\n"
input_file: inputs/good/core022.lat
---
; ModuleID = 'core022'
source_filename = "core022"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @printInt(i32 0)
  ret i32 0
}

