tests/snapshots/generated_from_inputs__good_core026.snap
---
source: tests/fixtures.rs
description: "int d() { return 0;}\nint s(int x) {return x + 1;}\nint main() {\n   printInt(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(s(d())))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))));  \n  return 0;\n}\n"
input_file: inputs/good/core026.lat
---
; ModuleID = 'core026'
source_filename = "core026"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @latte_user_d() {
b0:
  ret i32 0
}

define i32 @main() {
b0:
  %latte_user_d = call i32 @latte_user_d()
  %latte_user_s = call i32 @latte_user_s(i32 %latte_user_d)
  %latte_user_s1 = call i32 @latte_user_s(i32 %latte_user_s)
  %latte_user_s2 = call i32 @latte_user_s(i32 %latte_user_s1)
  %latte_user_s3 = call i32 @latte_user_s(i32 %latte_user_s2)
  %latte_user_s4 = call i32 @latte_user_s(i32 %latte_user_s3)
  %latte_user_s5 = call i32 @latte_user_s(i32 %latte_user_s4)
  %latte_user_s6 = call i32 @latte_user_s(i32 %latte_user_s5)
  %latte_user_s7 = call i32 @latte_user_s(i32 %latte_user_s6)
  %latte_user_s8 = call i32 @latte_user_s(i32 %latte_user_s7)
  %latte_user_s9 = call i32 @latte_user_s(i32 %latte_user_s8)
  %latte_user_s10 = call i32 @latte_user_s(i32 %latte_user_s9)
  %latte_user_s11 = call i32 @latte_user_s(i32 %latte_user_s10)
  %latte_user_s12 = call i32 @latte_user_s(i32 %latte_user_s11)
  %latte_user_s13 = call i32 @latte_user_s(i32 %latte_user_s12)
  %latte_user_s14 = call i32 @latte_user_s(i32 %latte_user_s13)
  %latte_user_s15 = call i32 @latte_user_s(i32 %latte_user_s14)
  %latte_user_s16 = call i32 @latte_user_s(i32 %latte_user_s15)
  %latte_user_s17 = call i32 @latte_user_s(i32 %latte_user_s16)
  %latte_user_s18 = call i32 @latte_user_s(i32 %latte_user_s17)
  %latte_user_s19 = call i32 @latte_user_s(i32 %latte_user_s18)
  %latte_user_s20 = call i32 @latte_user_s(i32 %latte_user_s19)
  %latte_user_s21 = call i32 @latte_user_s(i32 %latte_user_s20)
  %latte_user_s22 = call i32 @latte_user_s(i32 %latte_user_s21)
  %latte_user_s23 = call i32 @latte_user_s(i32 %latte_user_s22)
  %latte_user_s24 = call i32 @latte_user_s(i32 %latte_user_s23)
  %latte_user_s25 = call i32 @latte_user_s(i32 %latte_user_s24)
  %latte_user_s26 = call i32 @latte_user_s(i32 %latte_user_s25)
  %latte_user_s27 = call i32 @latte_user_s(i32 %latte_user_s26)
  %latte_user_s28 = call i32 @latte_user_s(i32 %latte_user_s27)
  %latte_user_s29 = call i32 @latte_user_s(i32 %latte_user_s28)
  %latte_user_s30 = call i32 @latte_user_s(i32 %latte_user_s29)
  %latte_user_s31 = call i32 @latte_user_s(i32 %latte_user_s30)
  %latte_user_s32 = call i32 @latte_user_s(i32 %latte_user_s31)
  %latte_user_s33 = call i32 @latte_user_s(i32 %latte_user_s32)
  %latte_user_s34 = call i32 @latte_user_s(i32 %latte_user_s33)
  %latte_user_s35 = call i32 @latte_user_s(i32 %latte_user_s34)
  %latte_user_s36 = call i32 @latte_user_s(i32 %latte_user_s35)
  %latte_user_s37 = call i32 @latte_user_s(i32 %latte_user_s36)
  %latte_user_s38 = call i32 @latte_user_s(i32 %latte_user_s37)
  %latte_user_s39 = call i32 @latte_user_s(i32 %latte_user_s38)
  %latte_user_s40 = call i32 @latte_user_s(i32 %latte_user_s39)
  %latte_user_s41 = call i32 @latte_user_s(i32 %latte_user_s40)
  %latte_user_s42 = call i32 @latte_user_s(i32 %latte_user_s41)
  %latte_user_s43 = call i32 @latte_user_s(i32 %latte_user_s42)
  %latte_user_s44 = call i32 @latte_user_s(i32 %latte_user_s43)
  %latte_user_s45 = call i32 @latte_user_s(i32 %latte_user_s44)
  %latte_user_s46 = call i32 @latte_user_s(i32 %latte_user_s45)
  %latte_user_s47 = call i32 @latte_user_s(i32 %latte_user_s46)
  %latte_user_s48 = call i32 @latte_user_s(i32 %latte_user_s47)
  %latte_user_s49 = call i32 @latte_user_s(i32 %latte_user_s48)
  %latte_user_s50 = call i32 @latte_user_s(i32 %latte_user_s49)
  %latte_user_s51 = call i32 @latte_user_s(i32 %latte_user_s50)
  %latte_user_s52 = call i32 @latte_user_s(i32 %latte_user_s51)
  %latte_user_s53 = call i32 @latte_user_s(i32 %latte_user_s52)
  %latte_user_s54 = call i32 @latte_user_s(i32 %latte_user_s53)
  %latte_user_s55 = call i32 @latte_user_s(i32 %latte_user_s54)
  %latte_user_s56 = call i32 @latte_user_s(i32 %latte_user_s55)
  %latte_user_s57 = call i32 @latte_user_s(i32 %latte_user_s56)
  %latte_user_s58 = call i32 @latte_user_s(i32 %latte_user_s57)
  %latte_user_s59 = call i32 @latte_user_s(i32 %latte_user_s58)
  %latte_user_s60 = call i32 @latte_user_s(i32 %latte_user_s59)
  %latte_user_s61 = call i32 @latte_user_s(i32 %latte_user_s60)
  %latte_user_s62 = call i32 @latte_user_s(i32 %latte_user_s61)
  %latte_user_s63 = call i32 @latte_user_s(i32 %latte_user_s62)
  %latte_user_s64 = call i32 @latte_user_s(i32 %latte_user_s63)
  %latte_user_s65 = call i32 @latte_user_s(i32 %latte_user_s64)
  %latte_user_s66 = call i32 @latte_user_s(i32 %latte_user_s65)
  %latte_user_s67 = call i32 @latte_user_s(i32 %latte_user_s66)
  %latte_user_s68 = call i32 @latte_user_s(i32 %latte_user_s67)
  %latte_user_s69 = call i32 @latte_user_s(i32 %latte_user_s68)
  %latte_user_s70 = call i32 @latte_user_s(i32 %latte_user_s69)
  %latte_user_s71 = call i32 @latte_user_s(i32 %latte_user_s70)
  %latte_user_s72 = call i32 @latte_user_s(i32 %latte_user_s71)
  %latte_user_s73 = call i32 @latte_user_s(i32 %latte_user_s72)
  %latte_user_s74 = call i32 @latte_user_s(i32 %latte_user_s73)
  %latte_user_s75 = call i32 @latte_user_s(i32 %latte_user_s74)
  %latte_user_s76 = call i32 @latte_user_s(i32 %latte_user_s75)
  %latte_user_s77 = call i32 @latte_user_s(i32 %latte_user_s76)
  %latte_user_s78 = call i32 @latte_user_s(i32 %latte_user_s77)
  %latte_user_s79 = call i32 @latte_user_s(i32 %latte_user_s78)
  call void @printInt(i32 %latte_user_s79)
  ret i32 0
}

define i32 @latte_user_s(i32 %0) {
b0:
  %v2 = add i32 %0, 1
  ret i32 %v2
}

