tests/snapshots/generated_from_inputs__good_core029.snap
---
source: tests/fixtures.rs
description: "int fun(int a, int b, int c, int d, int e, int f, int g,\n\tint h, int i, int j, int k, int l, int m, int n) {\n  m = m + 22;\n  return (2*a+b/2+3*c+d+4*e+f+g+h+i+j/2+k+l+m-6*n);\n}\n\nint main() {  \n  printInt(fun(1,2,1,1,2,1,2,1,2,1,2,1,2,1));\n  return 0;\n}\n"
input_file: inputs/good/core029.lat
---
; ModuleID = 'core029'
source_filename = "core029"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @latte_user_fun(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7, i32 %8, i32 %9, i32 %10, i32 %11, i32 %12, i32 %13) {
b0:
  %v15 = add i32 %12, 22
  %v17 = mul i32 2, %0
  %v19 = sdiv i32 %1, 2
  %v20 = add i32 %v17, %v19
  %v22 = mul i32 3, %2
  %v23 = add i32 %v20, %v22
  %v24 = add i32 %v23, %3
  %v26 = mul i32 4, %4
  %v27 = add i32 %v24, %v26
  %v28 = add i32 %v27, %5
  %v29 = add i32 %v28, %6
  %v30 = add i32 %v29, %7
  %v31 = add i32 %v30, %8
  %v33 = sdiv i32 %9, 2
  %v34 = add i32 %v31, %v33
  %v35 = add i32 %v34, %10
  %v36 = add i32 %v35, %11
  %v37 = add i32 %v36, %v15
  %v39 = mul i32 6, %13
  %v40 = sub i32 %v37, %v39
  ret i32 %v40
}

define i32 @main() {
b0:
  %latte_user_fun = call i32 @latte_user_fun(i32 1, i32 2, i32 1, i32 1, i32 2, i32 1, i32 2, i32 1, i32 2, i32 1, i32 2, i32 1, i32 2, i32 1)
  call void @printInt(i32 %latte_user_fun)
  ret i32 0
}

