tests/snapshots/generated_from_inputs__good_error.snap
---
source: tests/fixtures.rs
description: "int main() {\n    error();\n    return 0;\n}"
input_file: inputs/good/error.lat
---
; ModuleID = 'error'
source_filename = "error"

%string = type { i8*, i32 }

declare void @printInt(i32)

declare void @printString(%string*)

declare void @error()

declare i32 @readInt()

declare %string* @readString()

declare %string* @newString(i8*, i32)

declare %string* @stringConcat(%string*, %string*)

declare i32 @stringEqual(%string*, %string*)

define i32 @main() {
b0:
  call void @error()
  ret i32 0
}

